# data_catalog

./: .gitattributes  .gitignore  Cargo.toml
drug_data/: allopathic.csv  ayurvedic.csv  herbal.csv
src/: collector.rs  main.rs
src/db/: mod.rs
src/services/: data_source.rs  mod.rs  transport_api.rs
templates/: index.html  table.html
